[project]
name = "hockey"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Graunke",email = "rafael.graunke@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hockey", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
